# EHRGym

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements-train.txt
apps/ehr/: package.json
configs/: deepspeed_zero2.yaml  grpo_ehrgym.yaml
docker/: Dockerfile  entrypoint.sh  nginx.conf
docs/: offline-training.md  remote-vlm-demo.md
ehrgym/: __init__.py  env.py  rewards.py
env_server/app/: browser.py  main.py  models.py
notebooks/: ehrgym_grpo_training.ipynb
runs/datasets/: ehrgym_sft.jsonl  ehrgym_sft.jsonl.summary.json
scripts/: export_sft_dataset.py  generate_rollouts.py  record_trajectory.py  regenerate_tasks.py  remote_vlm_agent.py  replay_trajectory.py  sync_seed_scenarios.py  train_grpo.py  train_grpo_trl.py  train_sft.py  trajectory_lib.py  watch_replay.py
shared/: seed-data.ts
tasks/examples/: acute-coronary-syndrome-actions.json  acute-coronary-syndrome.json  acute-ischemic-stroke-actions.json  acute-ischemic-stroke.json  acute-pancreatitis-actions.json  acute-pancreatitis.json  aki-chart-review-actions.json  aki-chart-review.json  aki-demo-actions.json  alcohol-withdrawal-actions.json  alcohol-withdrawal.json  anaphylaxis-actions.json  anaphylaxis.json  asthma-exacerbation-actions.json  asthma-exacerbation.json  bacterial-meningitis-actions.json  bacterial-meningitis.json  cap-pneumonia-followup-actions.json  cap-pneumonia-followup.json  cdiff-colitis-actions.json  cdiff-colitis.json  chf-exacerbation-actions.json  chf-exacerbation.json  copd-exacerbation-actions.json  (+27 more)
(+15 files in other folders)
