[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehrgym"
version = "0.1.0"
description = "OpenEnv clinical EHR environment for GRPO fine-tuning with TRL"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
train = [
  "trl>=0.29.0",
  "transformers>=4.45.0",
  "datasets>=3.0.0",
  "accelerate>=1.0.0",
  "peft>=0.13.0",
]
server = [
  "fastapi>=0.115.0",
  "playwright>=1.51.0",
  "pydantic>=2.10.6",
  "uvicorn[standard]>=0.34.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/openenv-community/EHRGym"
Repository = "https://github.com/adtserapio/EHRGym"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ehrgym*"]
